crates/keron-lang/tests/corpus/errors/check/resource_does_not_narrow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Symlink`, found `Resource`
  --> 2:18
  |
2 | val s: Symlink = r
  |                  ^
